<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <ImageView
       android:id="@+id/select_product_image"
       android:layout_width="357dp"
       android:layout_height="258dp"
       android:layout_alignParentEnd="true"
       android:layout_alignParentBottom="true"
       android:layout_marginEnd="20dp"
       android:layout_marginBottom="365dp"
       android:cropToPadding="false"
       android:scaleType="centerCrop"
       android:src="@drawable/select_product_image" />

   <EditText
       android:id="@+id/product_name"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentEnd="true"
       android:layout_alignParentBottom="true"
       android:layout_marginEnd="99dp"
       android:layout_marginBottom="287dp"
       android:ems="10"
       android:hint="@string/pa1"
       android:inputType="textPersonName"
       android:textSize="24sp" />

   <EditText
       android:id="@+id/description"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentEnd="true"
       android:layout_alignParentBottom="true"
       android:layout_marginEnd="98dp"
       android:layout_marginBottom="214dp"
       android:ems="10"
       android:hint="@string/pa2"
       android:inputType="textPersonName"
       android:textSize="24sp" />

   <EditText
       android:id="@+id/price"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentEnd="true"
       android:layout_alignParentBottom="true"
       android:layout_marginEnd="98dp"
       android:layout_marginBottom="131dp"
       android:ems="10"
       android:hint="@string/pa3"
       android:inputType="textPersonName"
       android:textSize="24sp" />

   <Button
       android:id="@+id/new_edit"
       android:layout_width="267dp"
       android:layout_height="60dp"
       android:layout_alignParentEnd="true"
       android:layout_alignParentBottom="true"
       android:layout_marginEnd="76dp"
       android:layout_marginBottom="29dp"
       android:background="@drawable/button"
       android:text="Add Product"
       android:textStyle="bold" />


</RelativeLayout>